--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image:; 
+    background-image:url("https://www.ariyanhormoz.com/bgb.jpg"); 
   }
 
   .container {
